<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearmain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@drawable/simpleback"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/a_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/simpleback"
        android:gravity="center"
        android:paddingBottom="3dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="5dp"
        android:text="@string/non_ancora_pronto"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:id="@+id/bigpulsant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/simpleback"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp" >

        <TextView
            android:id="@+id/tv_descrizbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descrizionebtn"
            android:textColor="#FFFFFF" />

        <LinearLayout
            android:id="@+id/pulsantiera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnbuca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buca" />

            <Button
                android:id="@+id/btnluce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/illuminazione" />

            <Button
                android:id="@+id/btndecoro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pubblico_decoro" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/action_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@id/bigpulsant"
        android:layout_below="@id/a_type" >

        <fragment
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="5"
            class="com.google.android.gms.maps.SupportMapFragment"
            android:tag="pigeonmap" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/accedi_archivio"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/settings" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>